fix: clean up Command.style.scss by removing redundant code and improving readability

--- a/src/components/command/Command.style.scss
+++ b/src/components/command/Command.style.scss
@@ -48,16 +48,14 @@
     display: flex;
     height: 2rem;
     color: helpers.color(variables.$white, variables.$hierarchySecondary);
-    font-size: variables.$sm;;
+    font-size: variables.$sm;
     border-radius: variables.$borderRadius - variables.$xxs;
 
     &::placeholder {
       color: helpers.color(variables.$white, 25%);
     }
 
-    &:disabled {
-      @include helpers.disabled()
-    }
+    @include helpers.disabled();
 
     .input__right {
       padding-right: 0;
